<resources>
    <string name="app_name">Hamur Chef</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Recipe</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="search_desc">Search your desire\nrecipe food with\nmany category</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forget_your_password">Forget your password?</string>
    <string name="login_sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">- or -</string>
    <string name="get_started">Get Started</string>
    <string name="name">Name</string>
    <string name="forget_password">Forget Password</string>
    <string name="send">Send</string>
    <string name="example_recipename">RecipeName</string>
    <string name="example_country">Country</string>
    <string name="blank_text"></string>


</resources>
